# TexIO

./: .gitignore  CMakeLists.txt  README.md
Inc/: ColorFormats.h  Common.h  FormatIO.h  TGA_IO.h  TexIO.h
Tests/: main.cpp
